fixed main-title overlaping with navigation

--- a/components/nav.css
+++ b/components/nav.css
@@ -15,6 +15,7 @@ nav {
   background-color: rgba(0, 0, 0, 0.9);
   width: 100%;
   position: fixed;
+  z-index: 1;
 }
 
 .header-image {
