--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-size: 16px;
+  color: white;
 }
 
 body {
@@ -13,8 +14,6 @@ body {
   height: 100%;
   background-color: #232323;
 }
-
-
 
 #rotating-pics-banner {
   background:
@@ -27,7 +26,7 @@ body {
   height: 100vh;
   width: 100%;
   position: relative;
-  z-index: 1;
+  
 }
 
 #rotating-pics-banner h1 {
@@ -52,18 +51,14 @@ body {
   border-width: 2px 0;
   /* Sets the top and bottom borders to 2px, and left and right to 0 */
   width: 80%;
-
+  z-index: 0;
 }
 
-.location-title {
-  
-}
-
-.wrapper {
+/* .wrapper {
   margin: 0 auto;
-}
+} */
 
-.main-title h1{
+.main-title h1 {
   padding: 1em ;
   font-size: 3em;
   text-align: center;
